<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="vm"
            type="com.team42.student_record_app.entity.Student" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="05dp"
        android:background="@drawable/row_item_bg">

        <RelativeLayout
            android:id="@+id/rlMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="2dp">

            <RelativeLayout
                android:id="@+id/llActions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="10dp"
                android:padding="3dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_toStartOf="@+id/imgEdit"
                    android:text="@string/student_record"
                    android:textColor="@color/white"
                    android:textSize="18sp">

                </TextView>

                <ImageView
                    android:id="@+id/imgEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="25dp"
                    android:layout_toStartOf="@id/imgDelete"
                    android:src="@drawable/ic_edit"
                    app:tint="@color/white" />

                <ImageView
                    android:id="@+id/imgDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_delete"
                    app:tint="@color/white" />
            </RelativeLayout>

            <View
                android:id="@+id/HLine"
                android:layout_width="match_parent"
                android:layout_height="02dp"
                android:layout_marginTop="05dp"
                android:layout_below="@+id/llActions"
                android:background="@color/white" />

            <RelativeLayout
                android:id="@+id/rlData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/HLine"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/lblName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/student_name"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/lblName"
                    android:padding="2dp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/lblClass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtName"
                    android:padding="2dp"
                    android:text="@string/student_class"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtClass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtName"
                    android:layout_toEndOf="@id/lblClass"
                    android:padding="2dp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/lblRollNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lblClass"
                    android:padding="2dp"
                    android:text="@string/student_roll_no"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txtRollNO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtClass"
                    android:layout_toEndOf="@id/lblRollNo"
                    android:padding="2dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/lblMobileNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lblRollNo"
                    android:padding="2dp"
                    android:text="@string/student_mobile_no"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txtMobileNO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtRollNO"
                    android:layout_toEndOf="@id/lblMobileNo"
                    android:padding="2dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:visibility="gone" />

            </RelativeLayout>


        </RelativeLayout>


    </RelativeLayout>
</layout>

